// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": -101.9614554922677,
    },
    "isLeaf": false,
    "length": 516.9599966936684,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 4,
      "z": 156.51854285456645,
    },
    "path": "/root/src",
    "visible": true,
    "width": 328.9745433505162,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 205.48323016679566,
      "y": 6,
      "z": -129.8337252608396,
    },
    "isLeaf": false,
    "length": 339.3166885446334,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 205.48323016679566,
      "y": 6,
      "z": 39.8246190114771,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 250.04120491596274,
    "x0": 330.4626277088143,
    "y0": 35.33710260300206,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 142.97292893780497,
      "y": 6,
      "z": 205.20616658780952,
    },
    "isLeaf": false,
    "length": 128.0276363429744,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 267.99353139578636,
      "y": 6,
      "z": 205.20616658780952,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 250.04120491596274,
    "x0": 330.4626277088143,
    "y0": 391.1923484163223,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 134.9491736299822,
      "y": 506,
      "z": -121.56444662649619,
    },
    "isLeaf": true,
    "length": 306.23957400725965,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 134.9491736299822,
      "y": 506,
      "z": 31.555340377133632,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 87.19837779142455,
    "x0": 341.3499847342699,
    "y0": 51.8756598716889,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 233.03490844686237,
      "y": 506,
      "z": -121.56444662649619,
    },
    "isLeaf": true,
    "length": 306.23957400725965,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 233.03490844686237,
      "y": 506,
      "z": 31.555340377133632,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 87.19837779142443,
    "x0": 439.43571955115016,
    "y0": 51.8756598716889,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 137.6710128863461,
      "y": 506,
      "z": 205.20616658780952,
    },
    "isLeaf": true,
    "length": 94.95052180560066,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 230.31306919049842,
      "y": 506,
      "z": 205.20616658780952,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 185.28411260830467,
    "x0": 341.3499847342699,
    "y0": 407.7309056850092,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.47636168262221,
      "y": 4,
      "z": 454.94545003682055,
    },
    "isLeaf": false,
    "length": 281.9781800147283,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 290.4581783615624,
      "y": 4,
      "z": 454.94545003682055,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 469.9636333578803,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -29.117092321796235,
      "y": 6,
      "z": 347.7937416312238,
    },
    "isLeaf": false,
    "length": 56.39563600294571,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 17.879271013991797,
      "y": 6,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 93.99272667157607,
    "x0": 197.38472601030975,
    "y0": 569.5959236297509,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -22.797457530311718,
      "y": 506,
      "z": 335.65809513064846,
    },
    "isLeaf": true,
    "length": 48.54258600230139,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": -22.797457530311718,
      "y": 506,
      "z": 359.9293881317991,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 46.54721625101652,
    "x0": 203.92893434418002,
    "y0": 573.5224486300731,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238.76217869219556,
      "y": 6,
      "z": 528.2597768406499,
    },
    "isLeaf": false,
    "length": 135.34952640706956,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 351.5534506980868,
      "y": 6,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 225.58254401178255,
    "x0": 432.3665426892499,
    "y0": 710.5850136371151,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 208.05992852420096,
      "y": 506,
      "z": 477.59277888206555,
    },
    "isLeaf": true,
    "length": 46.65990649214939,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 208.05992852420096,
      "y": 506,
      "z": 500.9227321281403,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 33.57747626352494,
    "x0": 441.2711903924385,
    "y0": 715.9278022590282,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 250.54205249091444,
      "y": 506,
      "z": 477.59277888206555,
    },
    "isLeaf": true,
    "length": 46.65990649214939,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 250.54205249091444,
      "y": 506,
      "z": 500.9227321281403,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 33.577476263524886,
    "x0": 483.753314359152,
    "y0": 715.9278022590282,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 293.02417645762796,
      "y": 506,
      "z": 477.59277888206555,
    },
    "isLeaf": true,
    "length": 46.65990649214939,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 293.02417645762796,
      "y": 506,
      "z": 500.9227321281403,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 33.577476263524886,
    "x0": 526.2354383258655,
    "y0": 715.9278022590282,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 335.5063004243415,
      "y": 506,
      "z": 477.59277888206555,
    },
    "isLeaf": true,
    "length": 46.65990649214939,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 335.5063004243415,
      "y": 506,
      "z": 500.9227321281403,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 33.577476263524886,
    "x0": 568.717562292579,
    "y0": 715.9278022590282,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 210.28609044999808,
      "y": 506,
      "z": 528.2597768406499,
    },
    "isLeaf": true,
    "length": 20.658558935118094,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 248.3158905651173,
      "y": 506,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 76.0596002302384,
    "x0": 441.2711903924385,
    "y0": 767.9304973730908,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 210.28609044999808,
      "y": 506,
      "z": 554.2611243976812,
    },
    "isLeaf": true,
    "length": 20.658558935118094,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 248.3158905651173,
      "y": 506,
      "z": 554.2611243976812,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 76.0596002302384,
    "x0": 441.2711903924385,
    "y0": 793.9318449301221,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 210.28609044999808,
      "y": 506,
      "z": 580.2624719547125,
    },
    "isLeaf": true,
    "length": 20.658558935118094,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 248.3158905651173,
      "y": 506,
      "z": 580.2624719547125,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 76.0596002302384,
    "x0": 441.2711903924385,
    "y0": 819.9331924871534,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 293.02417645762796,
      "y": 506,
      "z": 529.5954739961281,
    },
    "isLeaf": true,
    "length": 46.65990649214939,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 293.02417645762796,
      "y": 506,
      "z": 552.9254272422029,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 33.577476263524886,
    "x0": 526.2354383258655,
    "y0": 767.9304973730908,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 335.5063004243415,
      "y": 506,
      "z": 529.5954739961281,
    },
    "isLeaf": true,
    "length": 46.65990649214939,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 335.5063004243415,
      "y": 506,
      "z": 552.9254272422029,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 33.577476263524886,
    "x0": 568.717562292579,
    "y0": 767.9304973730908,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 295.2503383834251,
      "y": 506,
      "z": 580.2624719547125,
    },
    "isLeaf": true,
    "length": 20.658558935118094,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 333.2801384985443,
      "y": 506,
      "z": 580.2624719547125,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 76.0596002302384,
    "x0": 526.2354383258655,
    "y0": 819.9331924871534,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 4,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 6,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 6,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -55.600665424244454,
      "y": 506,
      "z": -61.423641891097205,
    },
    "isLeaf": true,
    "length": 202.39053249417515,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -55.600665424244454,
      "y": 506,
      "z": 39.771624355990355,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 144.53484013971655,
    "x0": 122.13191450589727,
    "y0": 137.978724985359,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 6,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 83.62020258362281,
      "y": 506,
      "z": 164.4401768885804,
    },
    "isLeaf": true,
    "length": 39.60310119207372,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 83.62020258362281,
      "y": 506,
      "z": 184.24172748461726,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 14.696949130069925,
    "x0": 326.27172801858785,
    "y0": 404.53940159056197,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 4,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 4,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -96.08754666176853,
      "y": 502,
      "z": 405.79965337928917,
    },
    "isLeaf": true,
    "length": 66.00516865345628,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 8.98461138870914,
      "y": 502,
      "z": 405.79965337928917,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 210.14431610095536,
    "x0": 101.37637431299262,
    "y0": 622.797069052561,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": -101,
    },
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": 197,
    },
    "path": "/root",
    "visible": true,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143.1384387633061,
      "y": 2,
      "z": -53.430780618346944,
    },
    "isLeaf": false,
    "length": 786.2768775266122,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 143.1384387633061,
      "y": 2,
      "z": 339.70765814495917,
    },
    "path": "/root",
    "visible": true,
    "width": 786.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 92.73843876330608,
      "y": 4,
      "z": -43.83078061834698,
    },
    "isLeaf": true,
    "length": 747.8768775266121,
    "link": "http://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 92.73843876330608,
      "y": 4,
      "z": 330.1076581449591,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 647.0768775266122,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -69.03078061834697,
      "y": 502,
      "z": 526.6768775266122,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 254.50765814495912,
      "y": 502,
      "z": 526.6768775266122,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 647.0768775266122,
    "x0": 19.200000000000003,
    "y0": 776.6768775266122,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 225.07550765359252,
      "y": 2,
      "z": -12.462246173203738,
    },
    "isLeaf": false,
    "length": 950.151015307185,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 225.07550765359252,
      "y": 2,
      "z": 462.6132614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 950.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -32.862246173203744,
      "y": 4,
      "z": -2.862246173203772,
    },
    "isLeaf": true,
    "length": 911.751015307185,
    "link": "http://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -32.862246173203744,
      "y": 4,
      "z": 453.01326148038873,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 395.87550765359254,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 382.21326148038884,
      "y": 4,
      "z": -2.862246173203772,
    },
    "isLeaf": false,
    "length": 911.751015307185,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 382.21326148038884,
      "y": 4,
      "z": 453.01326148038873,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 395.8755076535925,
    "x0": 434.27550765359257,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 273.8943845669907,
      "y": 6,
      "z": -87.31734770392224,
    },
    "isLeaf": true,
    "length": 248.5653045921555,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 414.73213839378695,
      "y": 6,
      "z": -87.31734770392224,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 281.67550765359243,
    "x0": 453.4755076535926,
    "y0": 38.400000000000006,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 344.31326148038886,
      "y": 6,
      "z": 207.5617322709129,
    },
    "isLeaf": true,
    "length": 605.5857107150293,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 344.31326148038886,
      "y": 6,
      "z": 510.35458762842757,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 281.67550765359243,
    "x0": 453.4755076535926,
    "y0": 306.16530459215556,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 273.8943845669907,
      "y": 504,
      "z": 671.351015307185,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 414.73213839378695,
      "y": 504,
      "z": 671.351015307185,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 281.67550765359243,
    "x0": 453.4755076535926,
    "y0": 921.351015307185,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should build the tree map with valid coordinates using the fixed folder structure 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 929.3250516799595,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 929.3250516799595,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000758,
      "y": 4,
      "z": -133.83436854000507,
    },
    "isLeaf": false,
    "length": 139.39875775199394,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198131,
      "y": 4,
      "z": -133.83436854000507,
    },
    "path": "/root/folder_1",
    "visible": true,
    "width": 511.1287784239778,
    "x0": 46.46625258399798,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 2,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -190.16362133188707,
      "y": 504,
      "z": -164.5916173834496,
    },
    "isLeaf": true,
    "length": 123.02899537377812,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_1",
    "outgoingEdgePoint": Vector3 {
      "x": -190.16362133188707,
      "y": 504,
      "z": -103.07711969656054,
    },
    "path": "/root/folder_1/children_1",
    "visible": true,
    "width": 0,
    "x0": 59.83637866811293,
    "y0": 54.651133773105876,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -190.16362133188707,
      "y": 504,
      "z": -164.5916173834496,
    },
    "isLeaf": true,
    "length": 123.02899537377812,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_2",
    "outgoingEdgePoint": Vector3 {
      "x": -190.16362133188707,
      "y": 504,
      "z": -103.07711969656054,
    },
    "path": "/root/folder_1/children_2",
    "visible": true,
    "width": 0,
    "x0": 59.83637866811293,
    "y0": 54.651133773105876,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -190.16362133188707,
      "y": 504,
      "z": -164.5916173834496,
    },
    "isLeaf": true,
    "length": 123.02899537377812,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_3",
    "outgoingEdgePoint": Vector3 {
      "x": -190.16362133188707,
      "y": 504,
      "z": -103.07711969656054,
    },
    "path": "/root/folder_1/children_3",
    "visible": true,
    "width": 0,
    "x0": 59.83637866811293,
    "y0": 54.651133773105876,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 4,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2",
    "outgoingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 4,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_2",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 46.46625258399798,
    "y0": 232.33126291998988,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -196.36848624480814,
      "y": 504,
      "z": 111.76203553650336,
    },
    "isLeaf": true,
    "length": 411.6019612139056,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_4",
    "outgoingEdgePoint": Vector3 {
      "x": -196.36848624480814,
      "y": 504,
      "z": 317.56301614345614,
    },
    "path": "/root/folder_2/children_4",
    "visible": true,
    "width": 0,
    "x0": 53.63151375519185,
    "y0": 258.86154523302696,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -196.36848624480814,
      "y": 504,
      "z": 111.76203553650336,
    },
    "isLeaf": true,
    "length": 411.6019612139056,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": -196.36848624480814,
      "y": 504,
      "z": 317.56301614345614,
    },
    "path": "/root/folder_2/children_5",
    "visible": true,
    "width": 0,
    "x0": 53.63151375519185,
    "y0": 258.86154523302696,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 4,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_3",
    "outgoingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 4,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_3",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 325.26376808798585,
    "y0": 232.33126291998988,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 82.42902925917974,
      "y": 504,
      "z": 111.76203553650336,
    },
    "isLeaf": true,
    "length": 411.6019612139056,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_6",
    "outgoingEdgePoint": Vector3 {
      "x": 82.42902925917974,
      "y": 504,
      "z": 317.56301614345614,
    },
    "path": "/root/folder_3/children_6",
    "visible": true,
    "width": 0,
    "x0": 332.42902925917974,
    "y0": 258.86154523302696,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 82.42902925917974,
      "y": 504,
      "z": 111.76203553650336,
    },
    "isLeaf": true,
    "length": 411.6019612139056,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_7",
    "outgoingEdgePoint": Vector3 {
      "x": 82.42902925917974,
      "y": 504,
      "z": 317.56301614345614,
    },
    "path": "/root/folder_3/children_7",
    "visible": true,
    "width": 0,
    "x0": 332.42902925917974,
    "y0": 258.86154523302696,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 4,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_4",
    "outgoingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 4,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_4",
    "visible": true,
    "width": 92.93250516799594,
    "x0": 604.0612835919737,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 20,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 357.0724941091786,
      "y": 504,
      "z": 26.903378998697065,
    },
    "isLeaf": true,
    "length": 751.0365873651303,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_8",
    "outgoingEdgePoint": Vector3 {
      "x": 357.0724941091786,
      "y": 504,
      "z": 402.42167268126224,
    },
    "path": "/root/folder_4/children_8",
    "visible": true,
    "width": 0,
    "x0": 607.0724941091786,
    "y0": 89.14423215741449,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 357.0724941091786,
      "y": 504,
      "z": 26.903378998697065,
    },
    "isLeaf": true,
    "length": 751.0365873651303,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_9",
    "outgoingEdgePoint": Vector3 {
      "x": 357.0724941091786,
      "y": 504,
      "z": 402.42167268126224,
    },
    "path": "/root/folder_4/children_9",
    "visible": true,
    "width": 0,
    "x0": 607.0724941091786,
    "y0": 89.14423215741449,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 4,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_5",
    "outgoingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 4,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_5",
    "visible": true,
    "width": 139.3987577519939,
    "x0": 743.4600413439676,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 497.9018959111206,
      "y": 504,
      "z": 26.903378998697065,
    },
    "isLeaf": true,
    "length": 751.0365873651303,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_10",
    "outgoingEdgePoint": Vector3 {
      "x": 497.9018959111206,
      "y": 504,
      "z": 402.42167268126224,
    },
    "path": "/root/folder_5/children_10",
    "visible": true,
    "width": 0,
    "x0": 747.9018959111206,
    "y0": 89.14423215741449,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 497.9018959111206,
      "y": 504,
      "z": 26.903378998697065,
    },
    "isLeaf": true,
    "length": 751.0365873651303,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_11",
    "outgoingEdgePoint": Vector3 {
      "x": 497.9018959111206,
      "y": 504,
      "z": 402.42167268126224,
    },
    "path": "/root/folder_5/children_11",
    "visible": true,
    "width": 0,
    "x0": 747.9018959111206,
    "y0": 89.14423215741449,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000761,
      "y": 4,
      "z": 563.1594202199647,
    },
    "isLeaf": false,
    "length": 139.3987577519939,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_6",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198126,
      "y": 4,
      "z": 563.1594202199647,
    },
    "path": "/root/folder_6",
    "visible": true,
    "width": 511.1287784239777,
    "x0": 46.46625258399798,
    "y0": 743.4600413439676,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -189.15587245291562,
      "y": 504,
      "z": 532.751585349119,
    },
    "isLeaf": true,
    "length": 121.63133948338248,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_12",
    "outgoingEdgePoint": Vector3 {
      "x": -189.15587245291562,
      "y": 504,
      "z": 593.5672550908102,
    },
    "path": "/root/folder_6/children_12",
    "visible": true,
    "width": 0,
    "x0": 60.84412754708439,
    "y0": 752.3437504782734,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -189.15587245291562,
      "y": 504,
      "z": 532.751585349119,
    },
    "isLeaf": true,
    "length": 121.63133948338248,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_13",
    "outgoingEdgePoint": Vector3 {
      "x": -189.15587245291562,
      "y": 504,
      "z": 593.5672550908102,
    },
    "path": "/root/folder_6/children_13",
    "visible": true,
    "width": 0,
    "x0": 60.84412754708439,
    "y0": 752.3437504782734,
    "z0": 4,
  },
]
`;
